@@ -13,7 +13,7 @@ public class ArrayIndexOutOfBoundsException extends CatchableEvaluationException
 	private static final long serialVersionUID = 1L;
 
 	public ArrayIndexOutOfBoundsException(final ArrayLangObject array, final int index, final IEvaluationContext ec) {
-		super(ec, NullUtil.messageFormat(CmnCnst.Error.ARRAY_INDEX_OUT_OF_BOUNDS, new Integer(index), array));
+		super(ec, NullUtil.messageFormat(CmnCnst.Error.ARRAY_INDEX_OUT_OF_BOUNDS, Integer.valueOf(index), array));
 		this.array = array.toArray();
 		this.index = index;
 	}
